--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                   <img src="assets/card-icon.png" alt="">
                   <h4 class="skill-title">Digital Transformation</h4>
                   <p class="skill-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
-                  <button style="background-color: rgb(84, 144, 245);">Learn More</button>
+                  <button style="background-color: rgb(84, 144, 245);color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Learn More</button>
               </div>
               <div style="background-color: rgb(198, 228, 214);" class="skill">
                   <img src="assets/card-icon.png" alt="">
                   <h4 class="skill-title">Green Energy</h4>
                   <p class="skill-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
-                  <button style="background-color: rgb(9, 161, 92);">Learn More</button>
+                  <button style="background-color: rgb(9, 161, 92); color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Learn More</button>
               </div>
               <div style="background-color: rgb(247, 235, 207);"class="skill">
                   <img src="assets/card-icon.png" alt="">
                   <h4 class="skill-title">Modern Infrastructure</h4>
                   <p class="skill-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
-                  <button style="background-color: rgb(255, 194, 57);">Learn More</button>
+                  <button style="background-color: rgb(255, 194, 57); color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Learn More</button>
               </div>
           </div>
   
@@ -63,7 +63,7 @@
                 <p>Date: 05/01/2025   Time: 10.25 PM</p>
                 <p >Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button style="background-color: rgb(0, 106, 80);">Read More</button>
+                    <button style="background-color: rgb(0, 106, 80); color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Read More</button>
                  </div>
         </div>
       </section>
@@ -75,7 +75,7 @@
             <p>Date: 05/01/2025   Time: 10.25 PM</p>
             <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
             with a certain degree of justification, be able to speak of humankind as civilized</p>
-            <button style="background-color: rgb(0, 106, 80);">Read More</button>
+            <button style="background-color: rgb(0, 106, 80); color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Read More</button>
              </div>
              <div>
                 <img src="assets/satelite.png" alt="">
@@ -92,7 +92,7 @@
                 <p>Date: 05/01/2025   Time: 10.25 PM</p>
                 <p >Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
                     with a certain degree of justification, be able to speak of humankind as civilized</p>
-                    <button style="background-color: rgb(0, 106, 80);">Read More</button>
+                    <button style="background-color: rgb(0, 106, 80); color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Read More</button>
                  </div>
         </div>
       </section>
@@ -113,10 +113,11 @@
         <form class="form">
             <input type="text" placeholder="Enter Amount (Taka)">
         </form>
-        <button>Done Now</button>
+        <button style="background-color: rgb(0, 106, 80); color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Done Now</button>
     </div>
    
   </div>
   
+
   </body>
 </html>
