--- a/index.html
+++ b/index.html
@@ -99,23 +99,23 @@
   </main>
 
   <div class="donate">
-    <h2 class="donate">Donate Today</h2>
-    <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+    <h2 class="today">Donate Today</h2>
+    <p class="para">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
 
-    <section class="parents">
-        <div class="child"><button>100TAKA</button></div>
-        <div class="child"><button>200TAKA</button></div>
-        <div class="child"><button>300TAKA</button></div>
-        <div class="child"><button>400TAKA</button></div>
-      
-      </section>
+  <section >
+    <div class="btn-container">
+      <button style="color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">100TAKA</button>
+      <button style="color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">200TAKA</button>
+      <button  style="color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">300TAKA</button>
+      <button  style="color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">400TAKA</button>
+  </div>
+  </section>
       <div>
         <form class="form">
             <input type="text" placeholder="Enter Amount (Taka)">
         </form>
-        <button style="background-color: rgb(0, 106, 80); color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Done Now</button>
+        <button class="but" style="background-color: rgb(0, 106, 80); color: rgb(250, 250, 250); padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Done Now</button>
     </div>
-   
   </div>
   
 
