--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="icon" href="assets/IMG_9235-removebg-photoaidcom-cropped.jpg">
 </head>
 <body>
+  <div class="sing">
+    <h1>Bangladesh2.0</h1>
+  <button class="sss">Sing in</button>
+  </div>
     <nav class="nav">
       <header class="banner">
         <div class="container">
@@ -47,6 +51,19 @@
                   <button style="background-color: rgb(255, 194, 57); color: white; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Learn More</button>
               </div>
           </div>
+
+          <div class="total">
+            
+            <div>
+              <p class="lorem">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"</p>
+
+              <div class="Yunus">
+              <h3>Dr. Muhammad Yunus</h3>
+              <p>Chief Adviser of the People's Republic of Bangladesh</p>
+              </div>
+              
+            </div>
+          </div>
   
       </section>
 
@@ -55,7 +72,7 @@
         <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
 
         <div class="satalight">
-            <img src="assets/satelite.png" alt="">
+            <img src="assets/satelite.png" style="border-radius: 24px;">
             <div>
                 <h2>Bangladesh Launches New Satellite</h2>
 
@@ -71,7 +88,7 @@
       <section class="satalight2">
         <div>
             <h2>Bangladesh Launches New Satellite</h2>
-            <img src="assets/al-jazeera.png" alt="">
+            <img style="border-radius: 24px;" src="assets/al-jazeera.png"  alt="">
             <p>Date: 05/01/2025   Time: 10.25 PM</p>
             <p>Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
             with a certain degree of justification, be able to speak of humankind as civilized</p>
@@ -84,7 +101,7 @@
       </section>
       <section>
         <div class="satalight">
-            <img src="assets/satelite.png" alt="">
+            <img src="assets/satelite.png" style="border-radius: 24px;" alt="">
             <div>
                 <h2>Bangladesh Launches New Satellite</h2>
 
@@ -114,10 +131,22 @@
         <form class="form">
             <input type="text" placeholder="Enter Amount (Taka)">
         </form>
-        <button class="but" style="background-color: rgb(0, 106, 80); color: rgb(250, 250, 250); padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">Done Now</button>
+        <button class="but" style="background-color: rgb(0, 106, 80); color: rgb(250, 250, 250); padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 15px;">Done Now</button>
     </div>
   </div>
-  
+  <section class="subcribe-box" >
+    <h3 class="description-donate">Subscribe Newsletter</h3>
+    <p class="description-donate"> Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+    <div class="subcribe">
+    <div class="frame description-donate ">
+      <form class="email-box">
+        <input type="text" placeholder="Enter your email">
+        <button>Subscribe</button>
+      </form>
+    <p>We promise not to spam you!</p>
+  </div>
+  </div>
+  </section>
 
   </body>
 </html>
