--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
   <section >
     <div class="btn-container">
       <button style="color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">100TAKA</button>
-      <button style="color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">200TAKA</button>
-      <button  style="color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">300TAKA</button>
+      <button style="background-color: aquamarine; color: rgb(0, 0, 0); padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">200TAKA</button>
+      <button  style=" color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">300TAKA</button>
       <button  style="color: black; padding: 17px 34px 17px 34px; border: none; border-radius: 5px; font-size: 15px; cursor: pointer; margin-top: 45px;">400TAKA</button>
   </div>
   </section>
